# WrappedCPMAddPackage

./: CMakeLists.txt  README.md
.github/workflows/: ci_on_pr.yml
