# SPDX-FileCopyrightText: 2024 Simon Gene Gottlieb
# SPDX-License-Identifier: CC0-1.0

cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

include(cmake/CPM.cmake)
function(WrappedCPMAddPackage arg)

    if (arg MATCHES "^gh:ChunelFeng/CGraph")
        CPMAddPackage("${arg}" ${ARGN})
        add_library(cgraph STATIC $<TARGET_OBJECTS:CGraph>)
        target_link_libraries(cgraph INTERFACE CGraph)
        target_include_directories(cgraph SYSTEM INTERFACE ${CGraph_SOURCE_DIR}/src)
        add_library(cgraph::cgraph ALIAS cgraph)
    elseif (arg MATCHES "^gh:USCiLab/cereal")
        set(BUILD_DOC OFF)
        set(BUILD_SANDBOX OFF)
        set(SKIP_PERFORMANCE_COMPARISON ON)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:google/benchmark")
        set(BENCHMARK_ENABLE_TESTING OFF)
        set(BENCHMARK_ENABLE_INSTALL OFF)
        set(BENCHMARK_ENABLE_GTEST_TESTS OFF)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:google/googletest")
        set(BUILD_GMOCK OFF)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:boost-ext/reflect")
        CPMAddPackage("${arg}" ${ARGN})
        add_library(reflect INTERFACE)
        target_include_directories(reflect SYSTEM INTERFACE ${reflect_SOURCE_DIR})
        target_compile_options(reflect INTERFACE "-std=c++20")
        add_library(reflect::reflect ALIAS reflect)
    elseif (arg MATCHES "^gh:simd-everywhere/simde")
        CPMAddPackage("${arg}" ${ARGN})
        add_library(simde INTERFACE)
        target_include_directories(simde SYSTEM INTERFACE ${simde_SOURCE_DIR})
        add_library(simde::simde ALIAS simde)
    elseif (arg MATCHES "^https://zlib.net/zlib-.*.tar.gz")
        set(ZLIB_BUILD_EXAMPLES OFF)
        CPMAddPackage("${arg}" ${ARGN})
        add_library(zlib::zlib ALIAS zlib)
    elseif (arg MATCHES "^gh:facebook/zstd")
        set(ZSTD_BUILD_PROGRAMS FALSE)
        set(ZSTD_BUILD_TESTS FALSE)
        CPMAddPackage("${arg}" ${ARGN})
        add_subdirectory(${zstd_SOURCE_DIR}/build/cmake zstd)
        add_library(zstd::zstd ALIAS libzstd_static)
    elseif (arg MATCHES "^https://sourceware.org/pub/bzip2/bzip2-.*tar.gz")
        CPMAddPackage("${arg}" ${ARGN})
        add_library(bzip2
            ${bzip2_SOURCE_DIR}/blocksort.c
            ${bzip2_SOURCE_DIR}/bzip2.c
            ${bzip2_SOURCE_DIR}/bzlib.c
            ${bzip2_SOURCE_DIR}/compress.c
            ${bzip2_SOURCE_DIR}/crctable.c
            ${bzip2_SOURCE_DIR}/decompress.c
            ${bzip2_SOURCE_DIR}/dlltest.c
            ${bzip2_SOURCE_DIR}/huffman.c
            ${bzip2_SOURCE_DIR}/makefile.msc
            ${bzip2_SOURCE_DIR}/mk251.c
            ${bzip2_SOURCE_DIR}/randtable.c
            ${bzip2_SOURCE_DIR}/spewG.c
        )
        target_include_directories(bzip2 SYSTEM INTERFACE ${bzip2_SOURCE_DIR})
        add_library(bzip2::bzip2 ALIAS bzip2)
    elseif (arg MATCHES "^gh:glfw/glfw")
        set(GLFW_BUILD_TESTS OFF)
        set(GLFW_BUILD_EXAMPLES OFF)
        set(GLFW_BUILD_DOCS OFF)
        set(GLFW_INSTALL OFF)
        set(GLFW_USE_HYBRID_HPG ON)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:google/flatbuffers")
        set(FLATBUFFERS_BUILD_TESTS OFF)
        set(FLATBUFFERS_INSTALL OFF)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:microsoft/mimalloc")
        set(MI_BUILD_TESTS OFF)
        CPMAddPackage("${arg}" ${ARGN})
    elseif (arg MATCHES "^gh:libsndfile/libsamplerate")
        set(BUILD_TESTING_BAK ${BUILD_TESTING})
        set(BUILD_TESTING OFF)
        set(LIBSAMPLERATE_EXAMPLES OFF)
        set(LIBSAMPLERATE_INSTALL OFF)
        set(LIBSAMPLERATE_INSTALL_PKGCONFIG OFF)
        CPMAddPackage("${arg}" ${ARGN})
        set(BUILD_TESTING ${BUILD_TESTING_BAK})
    elseif (arg MATCHES "^gh:libsndfile/libsndfile")
        set(BUILD_TESTING_BAK ${BUILD_TESTING})
        set(BUILD_TESTING OFF)
        set(BUILD_PROGRAMS OFF)
        set(BUILD_EXAMPLES OFF)
        set(BUILD_REGTEST OFF)
        set(ENABLE_PACKAGE_CONFIG OFF)
        set(INSTALL_PKGCONFIG_MODULE OFF)
        CPMAddPackage("${arg}" ${ARGN})
        set(BUILD_TESTING ${BUILD_TESTING_BAK})
    elseif (arg MATCHES "^gh:intel/hyperscan")
        CPMAddPackage("${arg}" ${ARGN})
        add_library(hs_impl INTERFACE)
        target_link_libraries(hs_impl INTERFACE hs)
        target_include_directories(hs_impl SYSTEM INTERFACE ${hyperscan_SOURCE_DIR}/src)
        target_include_directories(hs_impl SYSTEM INTERFACE ${hyperscan_BINARY_DIR})
        add_library(hs::hs ALIAS hs_impl)
    else()
        message(FATAL_ERROR "WrapperCPMAddPackage doesn't know how to handle ${arg}")
    endif()

endfunction()
